--- a/site/index.html
+++ b/site/index.html
@@ -6,5 +6,6 @@
 <body>
 <h1>Maybe!</h1>
 <p>What happened to all the <a href="#">links</a>?</p>
+<p>Let's try this one more time with the proper message.</p>
 </body>
 </html>
